--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- Meta tags otimizadas com palavras-chave -->
+  <meta name="description" content="Lif3 Digital Media oferece serviços de Marketing Digital, SEO, Criação de Conteúdo, Social Media, Propaganda Comerciais, E-books e Audiobooks, Cursos Online e Inteligência Artificial para alavancar sua presença online." />
+  <meta name="keywords" content="Marketing Digital, SEO, Criação de Conteúdo, Social Media, Propaganda Comerciais, E-books, Audiobooks, Cursos Online, Inteligência Artificial" />
 </head>
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
- 
-  
 </body>
 </html>
